[tool.poetry]
name = "alg-bot"
version = "0.1.0"
description = ""
authors = ["Khinevich Aleksandr <a.khinevich@cft.ru>"]
readme = "README.md"
packages = [{include = "alg_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
